[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
description = "Serves Adapt's public REST API."
homepage = "https://adapt.chat"
license = "AGPL-3.0"
repository = "https://github.com/AdaptChat/webserver"
readme = "README.md"
keywords = ["adapt", "adapt-chat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
dashmap = "5.4.0"
dotenv = "0.15"
dotenv_codegen = { git = "https://github.com/FerrisChat/dotenv" }
essence = { path = "../essence", features = ["auth", "db"] }
forwarded-header-value = "0.1"
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
simd-json = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "parking_lot"] }
tower = { version = "0.4", features = ["buffer"] }
tower-http = { version = "0.3", features = ["cors"] }
