[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
description = "Serves Adapt's public REST API."
homepage = "https://adapt.chat"
license = "AGPL-3.0"
repository = "https://github.com/AdaptChat/webserver"
readme = "README.md"
keywords = ["adapt", "adapt-chat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
bincode = { version = "2.0.0-rc", optional = true }
bytes = "1"
dashmap = "5.4"
data-url = "0.2"
deadpool-lapin = { version = "0.10", features = ["serde"], optional = true }
dotenv = "0.15"
dotenv_codegen = { git = "https://github.com/FerrisChat/dotenv" }
essence = { path = "../essence", features = ["webserver"] }
forwarded-header-value = "0.1"
futures-util = "0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "json", "multipart", "rustls-tls"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
simd-json = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "parking_lot"] }
tower = { version = "0.4", features = ["buffer"] }
tower-http = { version = "0.4", features = ["cors"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
uuid = { version = "1.3", default-features = false, features = ["serde"] }

[features]
default = []
ws = ["dep:deadpool-lapin", "dep:bincode"]
