[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
description = "Serves Adapt's public REST API."
homepage = "https://adapt.chat"
license = "AGPL-3.0"
repository = "https://github.com/AdaptChat/webserver"
readme = "README.md"
keywords = ["adapt", "adapt-chat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
bincode = { version = "2.0.0-rc", optional = true }
bytes = "1"
dashmap = "5.5"
data-url = "0.3"
deadpool-lapin = { version = "0.12", features = ["serde"], optional = true }
deadqueue = { version = "0.2", features = ["unlimited"], default-features = false }
dotenv = "0.15"
dotenv_codegen = { git = "https://github.com/FerrisChat/dotenv" }
env_logger = "0.11"
erased-serde = "0.4"
essence = { path = "../essence", features = ["webserver"] }
fcm_v1 = { git = "https://github.com/Cryptex-github/fcm_v1.git" }
forwarded-header-value = "0.1"
futures-util = "0"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"], optional = true }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "multipart", "rustls-tls"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
simd-json = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "parking_lot"] }
tower = { version = "0.4", features = ["buffer"] }
tower-http = { version = "0.5", features = ["cors"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
uuid = { version = "1.3", default-features = false, features = ["serde"] }

[features]
default = ["email", "ws"]
email = ["dep:lettre"]
ws = ["dep:deadpool-lapin", "dep:bincode"]